reports bugs(not going to the file itself[fake link]) fixed.Concern: if the file is too small(symptoms not sure), the file is not uploaded to the database as it is considered as 0byte file

--- a/includes/css/reports-main.css
+++ b/includes/css/reports-main.css
@@ -1,3 +1,8 @@
+
+table, th, td
+{
+  border: 0px solid black;
+}
 #title, td
 {
   color:  #FF6600;
@@ -46,4 +51,10 @@ a
 .icn
 {
   color: #353535;
+}
+#check, .check
+{
+
+  width: 20px;
+  height: 20px;
 }
